--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "framer-motion": "^11.11.9",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "next": "14.2.14",
     "react": "^18",
