--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.2",
     "bcryptjs": "^2.4.3",
     "cookie": "^1.0.1",
     "js-cookie": "^3.0.5",
@@ -26,5 +27,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {}
 }
