--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@vercel/analytics": "^1.3.2",
     "bcryptjs": "^2.4.3",
     "cookie": "^1.0.1",
     "js-cookie": "^3.0.5",
@@ -27,6 +26,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {}
+  "license": "ISC"
 }
